# exercicio-23-06-2021

./: README.md  docker-compose.yml  pyproject.toml
base/: urls.py  views.py
produto/: models.py  serializers.py  tests.py  urls.py  views.py
produto/migrations/: 0001_initial.py
scripts/: run.sh
setup/: settings.py  urls.py
